--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-.teste{
-    color: purple
+.titulo{
+    color: rgb(66, 37, 4);
+}
+
+.container-pagina1{
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(45dg, #1F2D26, #545E45, #dd924c, #bb720d, #e76107;
+    background-size: 200% 200%;
+    animation: color 12s ease-in-out infinite;
+}
+
+@keyframes color{
+    0% { background-position: 0 50%;}
+    50% { background-position: 100% 50%;}
+    100% { background-position: 0 50%;}
 }
