--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: rgb(66, 37, 4);
 }
 
-.container-pagina1{
+.container{
     height: 100vh;
     width: 100%;
     background: linear-gradient(45dg, #1F2D26, #545E45, #dd924c, #bb720d, #e76107;
