--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .container{
     height: 100vh;
     width: 100%;
-    background: linear-gradient(45dg, #1F2D26, #545E45, #dd924c, #bb720d, #e76107;
+    background: linear-gradient(45dg, #1F2D26, #545E45, #dd924c, #bb720d, #e76107);
     background-size: 200% 200%;
     animation: color 12s ease-in-out infinite;
 }
