--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
-.titulo{
-    color: rgb(66, 37, 4);
-}
-
 .container{
     height: 100vh;
     width: 100%;
-    background: linear-gradient(45dg, #1F2D26, #545E45, #dd924c, #bb720d, #e76107);
-    background-size: 200% 200%;
+    background: linear-gradient(45dg, #1F2D26,#545E45,#dd924c,#e76107);
+    background-size: 300% 300%;
     animation: color 12s ease-in-out infinite;
 }
 
 @keyframes color{
     0% { background-position: 0 50%;}
+
     50% { background-position: 100% 50%;}
+    
     100% { background-position: 0 50%;}
 }
