--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     width: 100%;
     background: linear-gradient(45dg, #1F2D26,#545E45,#dd924c,#e76107);
     background-size: 300% 300%;
-    animation: color 12s ease-in-out infinite;
+    animation: background 12s ease-in-out infinite;
 }
 
-@keyframes color{
+@keyframes background{
     0% { background-position: 0 50%;}
 
     50% { background-position: 100% 50%;}
-    
+
     100% { background-position: 0 50%;}
 }
