--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     height: 100vh;
     width: 100%;
-    background: linear-gradient(45deg, #1F2D26,#545E45,#dd924c,#e76107);
+    background: linear-gradient(43deg, #4158D0 0%, #C850C0 30%, #FFCC70 66%, #ffffff 100%);
     background-size: 300% 300%;
     animation: background 12s ease-in-out infinite;
 }
