--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .container{
     height: 100vh;
     width: 100%;
-    color: white
+    color: white;
     text-align: center;
-    background: linear-gradient(43deg, #4158D0 0%, #C850C0 30%, #FFCC70 66%, #ffffff 100%);
+    background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 300% 300%;
     animation: background 12s ease-in-out infinite;
 }
