--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     height: 35vh;
     width: 100%;
     color: white;
+    text-size: 43px;
     text-align: center;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
