--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     width: 100%;
     color: white;
     text-size: 43px;
-    border-right: #4158D0 5px solid;
+    border-right: #d8dcec 5px solid;
     text-align: center;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
