--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    margin: 0px 0px 0px 0px;
+    margin: 0px;
+
 }
 
 
@@ -7,6 +8,7 @@ body{
 .container{
     height: 35vh;
     width: 100%;
+    border-radius: 25px;
     color: white;
     font-size: 25px;
     border-right: #d8dcec 5px solid;
