--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body{
 
 
 .container{
-    height: 35vh;
+    height: 25vh;
     width: 100%;
-    border-radius: 25px;
+    border-radius: 27px;
     color: white;
     font-size: 25px;
-    border-right: #d8dcec 5px solid;
+    border-right: #ecdbd8 5px solid;
     text-align: center;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
