--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body{
-    margin: 0;
+    margin: 0px;
 
 }
-
-
 
 .container{
     height: 25vh;
@@ -12,7 +10,7 @@ body{
     color: white;
     font-size: 25px;
     border-right: #ecdbd8 5px solid;
-    text-align: center;
+    padding-left: 34px;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
     animation: background 12s ease-in-out infinite;
