--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     border-radius: 27px;
     color: white;
     font-size: 25px;
-    border-right: #ecdbd8 5px solid;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
     animation: background 12s ease-in-out infinite;
@@ -21,4 +20,9 @@ body{
     50% { background-position: 100% 50%;}
 
     100% { background-position: 0 50%;}
+}
+
+#h1{
+    margin: 0px;
+    padding-left: 12px;
 }
