--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
 .container{
     height: 25vh;
     width: 100%;
-    border-radius: 27px;
+    border-bottom-left-radius: 24px ;
+    border-bottom-right-radius: 24px;
     color: white;
     text-align: center; 
     font-size: 27px;
