--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body{
     height: 23vh;
     width: 100%;
     color: white;
-    text-align: center; 
     font-size: 27px;
     margin: 0px;
     font-family: "Kalnia", serif;
@@ -26,4 +25,5 @@ body{
 
 .titulo{
     margin-top: 0px ;
+    padding-left: 12px ;
 }
