--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     color: white;
     font-size: 24px;
     margin: 0px;
-    display: grid;
     font-family: "Kalnia", serif;
     background: linear-gradient(43deg, #4158D0, #C850C0, #FFCC70, #ffffff);
     background-size: 250% 250%;
@@ -27,4 +26,11 @@ body{
 .titulo{
     margin-top: 0px ;
     padding-left: 29px ;
+}
+
+.imagem-logo{
+    width: 45px;
+    height: 30px;
+    align-items: end;
+    display: grid;
 }
