--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-    margin: 0px;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
 
 }
 
@@ -28,8 +30,23 @@ body{
     padding-left: 29px ;
 }
 
-.imagem-logo{
-    width: 45px;
-    height: 30px;
-    display: grid;
+#menu-horizontal{
+    list-style: none;
+    padding: 0px;
+    background-color: transparent;
+}
+
+#menu-horizontal li{
+    display: inline;
+}
+
+#menu-horizontal li a{
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
+    transition: background 1.3s linear 0.3ms;
+}
+
+#menu-horizontal li a:hover{
+    background-color: #f5bf82 ;
 }
