--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body{
 }
 
 #menu-horizontal ul{
-    height: 25px;
+    height: 12px;
+    align-items: center;
     list-style: none;
     padding: 0px;
     background-color: transparent;
