--- a/style.css
+++ b/style.css
@@ -25,12 +25,13 @@ body{
 }
 
 .titulo{
-    margin-top: 20px ;
-    padding-left: 29px ;
+    margin-top: 35px ;
+    padding-left: 20px ;
 }
 
 #menu-horizontal ul{
     height: 12px;
+    color: white;
     align-items: center;
     list-style: none;
     padding: 0px;
