--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0 auto;
+    margin: 0px;
     box-sizing: border-box;
 
 }
@@ -25,7 +25,7 @@ body{
 }
 
 .titulo{
-    margin-top: 16px ;
+    margin-top: 0px ;
     padding-left: 5px ;
 }
 
@@ -44,6 +44,7 @@ body{
 }
 
 #menu-horizontal ul li a{
+    color:white;
     padding: 25px;
     display: inline-block;
     text-decoration: none;
