--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
 #menu-horizontal ul{
     margin-top: 0px;
     height: 12px;
+    font-size: 12px;
     color: white;
     align-items: center;
     list-style: none;
