--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 
 #menu-horizontal ul{
     margin-top: 0px;
-    height: 12px;
+    height: 10px;
     font-size: 15px;
     color: white;
     align-items: center;
@@ -48,6 +48,7 @@ body{
 
 #menu-horizontal ul li a{
     color:white;
+    align-items: center;
     padding: 25px;
     display: inline-block;
     text-decoration: none;
