--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body{
 
 #menu-horizontal ul li a{
     color:white;
+    height: 10px;
     padding: 25px;
     display: inline-block;
     text-decoration: none;
